put the images on oferta academica

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,300 +1,277 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800);
+@import
+	url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800)
+	;
+
 body {
-    padding-top: 0;
-    padding-bottom: 20px;
-    background: #fff url(../images/bg.png) repeat left top;
-    font-size: 12px;
-    font-family: 'Open Sans', sans-serif;
+	padding-top: 0;
+	padding-bottom: 20px;
+	background: #fff url(../images/bg.png) repeat left top;
+	font-size: 12px;
+	font-family: 'Open Sans', sans-serif;
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
-
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
+.header,.marketing,.footer {
+	padding-left: 15px;
+	padding-right: 15px;
 }
 /* Custom page header */
-
 .header {
-    border-bottom: 1px solid #e5e5e5;
+	border-bottom: 1px solid #e5e5e5;
 }
 /* Make the masthead heading the same height as the navigation */
-
 .header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+	margin-top: 0;
+	margin-bottom: 0;
+	line-height: 40px;
+	padding-bottom: 19px;
 }
 /* Custom page footer */
-
 .footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
+	padding-top: 19px;
+	color: #777;
+	border-top: 1px solid #e5e5e5;
 }
 /* Customize container */
-
-@media (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
+@media ( min-width : 768px) {
+	.container {
+		max-width: 730px;
+	}
 }
 
-.container-narrow > hr {
-    margin: 30px 0;
+.container-narrow>hr {
+	margin: 30px 0;
 }
 /* Main marketing message and sign up button */
-
 .jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
+	text-align: center;
+	border-bottom: 1px solid #e5e5e5;
 }
 
 .jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+	font-size: 21px;
+	padding: 14px 24px;
 }
 /* Supporting marketing content */
-
 .marketing {
-    margin: 40px 0;
+	margin: 40px 0;
 }
 
-.marketing p + h4 {
-    margin-top: 28px;
+.marketing p+h4 {
+	margin-top: 28px;
 }
 /* Responsive: Portrait tablets and up */
-
 @media screen and (min-width: 768px) {
-    /* Remove the padding we set earlier */
-    
-    .header,
-    .marketing,
-    .footer {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    /* Space out the masthead */
-    
-    .header {
-        margin-bottom: 30px;
-    }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    
-    .jumbotron {
-        border-bottom: 0;
-    }
+	/* Remove the padding we set earlier */
+	.header,.marketing,.footer {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	/* Space out the masthead */
+	.header {
+		margin-bottom: 30px;
+	}
+	/* Remove the bottom border on the jumbotron for visual effect */
+	.jumbotron {
+		border-bottom: 0;
+	}
 }
 
 .angular-google-map-container {
-    height: 273px;
+	height: 273px;
 }
 
 body {
-    font: "Open Sans", Arial, Helvetica, sans-serif;
-    line-height: 18px;
-    color: #707070;
+	font: "Open Sans", Arial, Helvetica, sans-serif;
+	line-height: 18px;
+	color: #707070;
 }
 
-h3,
-h4 {
-    font: 14px 'Open Sans', Arial, Helvetica, sans-serif;
-    color: #222;
-    text-transform: uppercase;
-    margin-bottom: 19px;
-    letter-spacing: 1px;
+h3,h4 {
+	font: 14px 'Open Sans', Arial, Helvetica, sans-serif;
+	color: #222;
+	text-transform: uppercase;
+	margin-bottom: 19px;
+	letter-spacing: 1px;
 }
 
 h2 {
-    color: #444;
-    font: 600 24px/29px "Open Sans", Arial, Helvetica, sans-serif;
-    margin: 0 0 17px 0;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+	color: #444;
+	font: 600 24px/29px "Open Sans", Arial, Helvetica, sans-serif;
+	margin: 0 0 17px 0;
+	letter-spacing: 1px;
+	text-transform: uppercase;
 }
 
 a {
-    font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .unSeparador {
-    background-color: rgb(176, 178, 173);
-    height: 1px;
-    margin-top: 20px;
+	background-color: rgb(176, 178, 173);
+	height: 1px;
+	margin-top: 20px;
 }
 
 #services {
-    background: #000 url(../images/bg_services.png);
-    background-size: cover;
+	background: #000 url(../images/bg_services.png);
+	background-size: cover;
 }
 /*************************
 *******Typography******
 **************************/
-
 body {
-    font-family: 'Open Sans', sans-serif;
-    color: #4e4e4e;
-    line-height: 22px;
+	font-family: 'Open Sans', sans-serif;
+	color: #4e4e4e;
+	line-height: 22px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: 600;
-    font-family: 'Open Sans', sans-serif;
-    color: #4e4e4e;
+h1,h2,h3,h4,h5,h6 {
+	font-weight: 600;
+	font-family: 'Open Sans', sans-serif;
+	color: #4e4e4e;
 }
 
 h1 {
-    font-size: 36px;
-    color: #fff;
+	font-size: 36px;
+	color: #fff;
 }
 
 h2 {
-    font-size: 20px;
+	font-size: 20px;
 }
 
 h3 {
-    font-size: 16px;
-    color: #787878;
-    font-weight: 400;
-    line-height: 24px;
+	font-size: 16px;
+	color: #787878;
+	font-weight: 400;
+	line-height: 24px;
 }
 
 h4 {
-    font-size: 16px;
+	font-size: 16px;
 }
 
 a {
-    color: #c52d2f;
-    -webkit-transition: color 300ms, background-color 300ms;
-    -moz-transition: color 300ms, background-color 300ms;
-    -o-transition: color 300ms, background-color 300ms;
-    transition: color 300ms, background-color 300ms;
+	color: #c52d2f;
+	-webkit-transition: color 300ms, background-color 300ms;
+	-moz-transition: color 300ms, background-color 300ms;
+	-o-transition: color 300ms, background-color 300ms;
+	transition: color 300ms, background-color 300ms;
 }
 
-a:hover,
-a:focus {
-    color: #d43133;
+a:hover,a:focus {
+	color: #d43133;
 }
 
 hr {
-    border-top: 1px solid #e5e5e5;
-    border-bottom: 1px solid #fff;
+	border-top: 1px solid #e5e5e5;
+	border-bottom: 1px solid #fff;
 }
 
 .btn-primary {
-    padding: 8px 20px;
-    background: #c52d2f;
-    color: #fff;
-    border-radius: 4px;
-    border: none;
-    margin-top: 10px;
+	padding: 8px 20px;
+	background: #c52d2f;
+	color: #fff;
+	border-radius: 4px;
+	border: none;
+	margin-top: 10px;
 }
 
-.btn-primary:hover,
-.btn-primary:focus {
-    background: #c52d2f;
-    outline: none;
-    box-shadow: none;
+.btn-primary:hover,.btn-primary:focus {
+	background: #c52d2f;
+	outline: none;
+	box-shadow: none;
 }
 
 .btn-transparent {
-    border: 3px solid #fff;
-    background: transparent;
-    color: #fff;
+	border: 3px solid #fff;
+	background: transparent;
+	color: #fff;
 }
 
 .btn-transparent:hover {
-    border-color: rgba(255, 255, 255, 0.5);
+	border-color: rgba(255, 255, 255, 0.5);
 }
 
-a:hover,
-a:focus {
-    color: #111;
-    text-decoration: none;
-    outline: none;
+a:hover,a:focus {
+	color: #111;
+	text-decoration: none;
+	outline: none;
 }
 
 .dropdown-menu {
-    margin-top: -1px;
-    min-width: 180px;
+	margin-top: -1px;
+	min-width: 180px;
 }
 
 .center h2 {
-    font-size: 36px;
-    margin-top: 0;
-    margin-bottom: 20px;
+	font-size: 36px;
+	margin-top: 0;
+	margin-bottom: 20px;
 }
 
 .media>.pull-left {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 .media>.pull-right {
-    margin-left: 20px;
+	margin-left: 20px;
 }
 
-body > section {
-    padding: 70px 0;
+body>section {
+	padding: 70px 0;
 }
 
 .center {
-    text-align: center;
-    padding-bottom: 55px;
+	text-align: center;
+	padding-bottom: 55px;
 }
 
 .scaleIn {
-    -webkit-animation-name: scaleIn;
-    animation-name: scaleIn;
+	-webkit-animation-name: scaleIn;
+	animation-name: scaleIn;
 }
 
 .lead {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 400;
 }
 
 .transparent-bg {
-    background-color: transparent !important;
-    margin-bottom: 0;
+	background-color: transparent !important;
+	margin-bottom: 0;
 }
 
-body > section {
-    padding: 70px 0;
+body>section {
+	padding: 70px 0;
 }
 
 .services-wrap {
-    padding: 40px 30px;
-    background: #fff;
-    border-radius: 4px;
-    margin: 0 0 40px;
+	padding: 58px 15px 0 21px;
+	background: #fff;
+	border-radius: 4px;
+	margin: 0 0 40px;
 }
 
-#services .lead,
-#services h2 {
-    color: #fff;
+#services .lead,#services h2 {
+	color: #fff;
 }
 
 .lead {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 400;
 }
 
 .services-wrap h3 {
-    font-size: 16px;
-    margin: 10px 0;
+	font-size: 16px;
+	margin: 10px 0;
 }
 
 h3 {
-  font-size: 16px;
-  color: #787878;
-  font-weight: 400;
-  line-height: 24px;
+	font-size: 16px;
+	color: #787878;
+	font-weight: 400;
+	line-height: 24px;
 }
