update images for slider

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,11 +7,11 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="images/slider/la_X.jpg" style="height:400px;width:100%;">
+            <img src="images/slider/la_X.jpg" style="height:700px;width:100%;">
             <div class="carousel-caption">....</div>
         </div>
         <div class="item">
-            <img src="images/slider/la_X.jpg" style="height:400px;width:100%;">
+            <img src="images/slider/cupnAd.jpg" style="height:700px;width:100%;">
             <div class="carousel-caption">...</div>
         </div>
     </div>
